--- a/html/no.html
+++ b/html/no.html
@@ -11,7 +11,8 @@
       <div class="no">
         <div class="no-statement">
           <h2>
-            you think you have a choice click on the button below <img id="ang"
+            you think <br />
+            you have a choice <br />click on the button below <img id="ang"
             src="angry.png"
           </h2>
         </div>
