--- a/html/yes.html
+++ b/html/yes.html
@@ -11,10 +11,10 @@
       <div class="yes">
         <div class="yes-statement">
           <h2>
-            I L<img src="heart2.png" alt="" />VE <br />Y<img
+            I L<img src="heart2.png" alt="" />VE Y<img
               src="heart2.png"
               alt=""
-            />U Y<img src="heart2.png" alt="" />UR GIFT SHALL ARRIVE S<img
+            />U <br />Y<img src="heart2.png" alt="" />UR GIFT SHALL ARRIVE S<img
               src="heart2.png"
               alt=""
             /><img src="heart2.png" alt="" />N
